--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,10 @@
   }
 }
 
+.spinner-container {
+  position: fixed !important;
+  top: 45% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  z-index: 1000 !important;
+}
