--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,8 +19,13 @@
         </nz-form-control>
       </nz-form-item>
       <div nz-row class="login-form-margin">
-        <div nz-col [nzSpan]="12">
-          <a class="login-form-forgot">Esqueceu a senha?</a>
+        <div nz-col [nzSpan]="24">
+          <a class="login-form-forgot ">Esqueceu a senha?</a>
+        </div>
+      </div>
+      <div nz-row class="login-form-margin">
+        <div nz-col [nzSpan]="24">
+          <a class="login-form-forgot" routerLink="cadastro">Cadastre-se</a>
         </div>
       </div>
       <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Logar</button>
